<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".register_screen">

    <TextView
        android:id="@+id/reg_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/reg_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:text="@string/input_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_register"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/reg_example_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:background="@drawable/my_border"
        android:hint="@string/example_name"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_name"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/reg_input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:text="@string/input_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_example_name"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/reg_example_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:background="@drawable/my_border"
        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_email"
        app:layout_constraintVertical_bias="0.01" />


    <TextView
        android:id="@+id/reg_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:text="@string/input_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_example_email"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/reg_example_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:background="@drawable/my_border"
        android:hint="@string/example_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_password"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/reg_input_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:text="@string/input_age"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_example_password"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/reg_example_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:background="@drawable/my_border"
        android:hint="@string/example_age"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_age"
        app:layout_constraintVertical_bias="0.01" />

    <!--    TODO: Добавить функции кнопкам-->

    <TextView
        android:id="@+id/reg_input_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:text="@string/input_school"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_example_age"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/reg_example_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:gravity="left"
        android:background="@drawable/my_border"
        android:hint="@string/example_school"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_school"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/reg_button_register"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        app:layout_constraintHeight_percent="0.1"
        android:onClick="Click_Register3"
        android:textSize="20sp"
        android:ems="15"
        android:gravity="center"
        android:backgroundTint="@color/for_button"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_example_school"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/reg_button_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:onClick="Click_Alreadyhaveaccount"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey"
        android:text="@string/button_have_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_button_register"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>