<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".admin_panel">

    <TextView
        android:id="@+id/admin_checker_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:singleLine="false"
        android:textStyle="bold"
        android:text="@string/admin_enter_code"
        android:textSize="50sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/admin_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:gravity="left"
        android:ems="15"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_checker_code"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/admin_example_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/code_example"
        android:inputType="number"
        android:textSize="30sp"
        android:background="@drawable/my_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_input_code"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/grant_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:ems="15"
        android:onClick="Click_getrole"
        android:drawableLeft="@drawable/checkmark_small"
        android:text="@string/grant_role"
        android:textSize="20sp"
        android:backgroundTint="@color/for_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_example_code"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/admin_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:ems="15"
        android:text="@string/admin_explain"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grant_button"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>