<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".user_qr">

    <TextView
        android:id="@+id/qr_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_owner"
        android:textSize="50sp"
        android:ems="6"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!--  TODO: Вписывать в строку user info значения с переменных из бд-->

    <TextView
        android:id="@+id/qr_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_owner_role"
        android:textSize="20sp"
        android:ems="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_hello"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="*email,\n age,\n school*"
        android:textSize="20sp"
        android:ems="15"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_tip"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/qr_my_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_code"
        android:textSize="50sp"
        android:ems="6"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_info"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/qr_number_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:text="*Код*"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_my_code"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>